<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_round_window"
    android:orientation="vertical">

    <com.alcidae.smarthome.ir.widget.IrTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="27dp"
        android:gravity="center"
        android:text="@string/ir_add_unsuccessful"
        android:textColor="@color/color_222222"
        android:textSize="20sp" />


    <com.alcidae.smarthome.ir.widget.IrTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/ir_dialog_add_unsuccessful_hint" />


    <com.alcidae.smarthome.ir.widget.IrButton
        android:id="@+id/id_dialog_unsuccess_ok_btn"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:background="@drawable/selector_button_round2"
        android:text="@string/ir_ok"
        android:textColor="@color/color_textPrimary"
        android:textSize="18sp" />
</LinearLayout>