<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ir_dialog_bg" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="490dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <com.alcidae.smarthome.ir.widget.IrTextView
                android:id="@+id/id_dialog_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/ir_net_box"
                android:textColor="@color/color_textPrimary"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/id_dialog_title_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:padding="7dp"
                android:src="@drawable/ir_closed" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@color/color_999999" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="17dp"
            android:orientation="horizontal">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.alcidae.smarthome.ir.widget.IrVibrateImageView
                    android:id="@+id/id_dialog_box_power_iv"
                    style="@style/DialogIconStyle"
                    android:src="@drawable/selector_power_switch" />

                <com.alcidae.smarthome.ir.widget.IrTextView
                    style="@style/DialogTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ir_power" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.alcidae.smarthome.ir.widget.IrVibrateImageView
                    android:id="@+id/id_dialog_box_back_iv"
                    style="@style/DialogIconStyle"
                    android:src="@drawable/selector_back" />

                <com.alcidae.smarthome.ir.widget.IrTextView
                    style="@style/DialogTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ir_back" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/id_dialog_stb_pad_num_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <com.alcidae.smarthome.ir.widget.IrTextView
                    android:id="@+id/id_dialog_stb_num_1_iv"
                    style="@style/DialogNumStyle"
                    android:layout_marginLeft="45dp"
                    android:text="@string/num_1" />

                <com.alcidae.smarthome.ir.widget.IrTextView
                    android:id="@+id/id_dialog_stb_num_2_iv"
                    style="@style/DialogNumStyle"
                    android:layout_centerInParent="true"
                    android:text="@string/num_2" />

                <com.alcidae.smarthome.ir.widget.IrTextView
                    android:id="@+id/id_dialog_stb_num_3_iv"
                    style="@style/DialogNumStyle"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="45dp"
                    android:text="@string/num_3" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <com.alcidae.smarthome.ir.widget.IrTextView
                    android:id="@+id/id_dialog_stb_num_4_iv"
                    style="@style/DialogNumStyle"
                    android:layout_marginLeft="45dp"
                    android:text="@string/num_4" />

                <com.alcidae.smarthome.ir.widget.IrTextView
                    android:id="@+id/id_dialog_stb_num_5_iv"
                    style="@style/DialogNumStyle"
                    android:layout_centerInParent="true"
                    android:text="@string/num_5" />

                <com.alcidae.smarthome.ir.widget.IrTextView
                    android:id="@+id/id_dialog_stb_num_6_iv"
                    style="@style/DialogNumStyle"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="45dp"
                    android:text="@string/num_6" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <com.alcidae.smarthome.ir.widget.IrTextView
                    android:id="@+id/id_dialog_stb_num_7_iv"
                    style="@style/DialogNumStyle"
                    android:layout_marginLeft="45dp"
                    android:text="@string/num_7" />

                <com.alcidae.smarthome.ir.widget.IrTextView
                    android:id="@+id/id_dialog_stb_num_8_iv"
                    style="@style/DialogNumStyle"
                    android:layout_centerInParent="true"
                    android:text="@string/num_8" />

                <com.alcidae.smarthome.ir.widget.IrTextView
                    android:id="@+id/id_dialog_stb_num_9_iv"
                    style="@style/DialogNumStyle"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="45dp"
                    android:text="@string/num_9" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <com.alcidae.smarthome.ir.widget.IrTextView
                    android:id="@+id/id_dialog_stb_num_input_iv"
                    style="@style/DialogNumStyle"
                    android:layout_marginLeft="45dp"
                    android:text="@string/num_input" />

                <com.alcidae.smarthome.ir.widget.IrTextView
                    android:id="@+id/id_dialog_stb_num_0_iv"
                    style="@style/DialogNumStyle"
                    android:layout_centerInParent="true"
                    android:text="@string/num_0" />

                <com.alcidae.smarthome.ir.widget.IrTextView
                    android:id="@+id/id_dialog_stb_num_exit_iv"
                    style="@style/DialogNumStyle"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="45dp"
                    android:background="@drawable/selector_exit_pad" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_dialog_box_pad_1_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <RelativeLayout
                    android:id="@+id/id_dialog_box_pad_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <com.alcidae.smarthome.ir.widget.IrPadView
                        android:id="@+id/id_dialog_box_padview"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:scaleType="center" />

                    <com.alcidae.smarthome.ir.widget.IrTextView
                        style="@style/DialogTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/ir_ok" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/id_dialog_box_pad_layout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:orientation="vertical">

                            <com.alcidae.smarthome.ir.widget.IrVibrateImageView
                                android:id="@+id/id_dialog_box_volume_up_iv"
                                style="@style/DialogIconStyle"
                                android:src="@drawable/selector_volume_up" />

                            <com.alcidae.smarthome.ir.widget.IrVibrateImageView
                                android:id="@+id/id_dialog_box_volume_down_iv"
                                style="@style/DialogIconStyle"
                                android:src="@drawable/selector_volume_down" />

                        </LinearLayout>

                        <com.alcidae.smarthome.ir.widget.IrTextView
                            style="@style/DialogTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/ir_volume" />
                    </RelativeLayout>


                    <com.alcidae.smarthome.ir.widget.IrVibrateImageView
                        android:id="@+id/id_dialog_box_home_iv"
                        style="@style/DialogIconStyle"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/selector_home" />

                    <com.alcidae.smarthome.ir.widget.IrVibrateImageView
                        android:id="@+id/id_dialog_box_menu_iv"
                        style="@style/DialogIconStyle"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/selector_menu" />

                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>